deploy/kustomize/components/observability/coroot/coroot-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coroot
  namespace: observability
spec:
  hostnames:
  - coroot.YOUR_DOMAIN
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: web-gateway
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - name: platform-coroot
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
